<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/wallpaper1"
    tools:context=".FrequencyActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/tool_background"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        android:paddingBottom="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:titleTextColor="@color/logo1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">
            <TextView
                android:id="@+id/toolbar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Frequency Convertion"
                android:textColor="@color/logo1"
                android:textSize="25sp"
                android:textStyle="bold"
                />
        </LinearLayout>

        <!-- Centered Title TextView -->

    </androidx.appcompat.widget.Toolbar>





    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardBackgroundColor="@color/logo1"
        app:cardCornerRadius="20dp"
        app:cardElevation="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                app:boxCornerRadiusBottomEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusTopStart="10dp"
                android:background="@drawable/input_round">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/frequencyInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_units_to_convert"
                    android:inputType="numberDecimal"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:textSize="20sp"
                    android:layout_marginBottom="5dp"
                    android:textColor="@color/black"
                    />
            </com.google.android.material.textfield.TextInputLayout>


            <!-- Arrow Icon -->
            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/baseline_arrow_forward_24"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"/>

            <!-- Conversion Title -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/unit_converter"
                android:textColor="@color/logo2"
                android:textSize="24sp"
                android:textStyle="bold" />

            <!-- Conversion Text: 'Convert from' and 'Convert to' -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="16dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/convert_from"
                    android:textColor="@color/logo2"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/convert_to"
                    android:textColor="@color/logo2"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <!-- Spinners: 'From' and 'To' conversion -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="16dp">

                <Spinner
                    android:id="@+id/spinner_from"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginEnd="8dp"
                    android:gravity="center"
                    android:background="@color/logo2"
                    tools:ignore="TouchTargetSizeCheck"
                    android:textColor="@color/logo1"

                    />

                <Spinner
                    android:id="@+id/spinner_to"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginStart="8dp"
                    android:gravity="center"
                    android:textColor="@color/logo1"
                    android:background="@color/logo2"
                    tools:ignore="TouchTargetSizeCheck" />
            </LinearLayout>

            <!-- Conversion Result Card -->
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_marginTop="24dp"
                app:cardBackgroundColor="@color/logo2"
                app:cardCornerRadius="20dp"
                app:cardElevation="4dp"
                android:layout_gravity="center_horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:padding="16dp">

                    <TextView
                        android:id="@+id/conversionResult"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="30sp"
                        android:textColor="@color/logo1"
                        android:text="0.0"
                        android:textStyle="bold"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/convertion_ratio"
                        android:textColor="@color/logo1"
                        android:textSize="16sp"
                        android:layout_marginTop="8dp"/>
                </LinearLayout>

            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/convertButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/convert"
        android:textColor="@color/logo1"
        android:textSize="18sp"
        android:textStyle="bold"
        android:backgroundTint="@color/logo2"
        android:paddingLeft="32dp"
        android:paddingRight="32dp"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        />



</LinearLayout>