<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wallpaper1"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <!-- Toolbar Section -->


    <!-- Card Grid Section -->

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/tool_background"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        android:paddingBottom="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:titleTextColor="@color/logo1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">
            <TextView
                android:id="@+id/toolbar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Unit Converter"
                android:textColor="@color/logo1"
                android:textSize="25sp"
                android:textStyle="bold"
                />
        </LinearLayout>

        <!-- Centered Title TextView -->

    </androidx.appcompat.widget.Toolbar>


    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:columnCount="2"
        android:padding="5dp"
        android:orientation="horizontal">

        <!-- Area Card -->
        <androidx.cardview.widget.CardView
            android:id="@+id/area_cardView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:layout_columnWeight="1"
            app:cardBackgroundColor="@color/logo2"
            app:cardCornerRadius="15dp"
            app:cardMaxElevation="10dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">
                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/area"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/area"
                    android:textColor="@color/logo1"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    android:layout_marginBottom="10dp"
                    />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <!-- Speed Card -->
        <androidx.cardview.widget.CardView
            android:id="@+id/speed_cardView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:layout_columnWeight="1"
            app:cardBackgroundColor="@color/logo2"
            app:cardCornerRadius="15dp"
            app:cardMaxElevation="10dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">
                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/speed"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/speed"
                    android:textColor="@color/logo1"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    android:layout_marginBottom="10dp"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <!-- Length Card -->
        <androidx.cardview.widget.CardView
            android:id="@+id/length_cardView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:layout_columnWeight="1"
            app:cardBackgroundColor="@color/logo2"
            app:cardCornerRadius="15dp"
            app:cardMaxElevation="10dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">
                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/length"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/length"
                    android:textColor="@color/logo1"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    android:layout_marginBottom="10dp"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <!-- Temperature Card -->
        <androidx.cardview.widget.CardView
            android:id="@+id/temperature_cardView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:layout_columnWeight="1"
            app:cardBackgroundColor="@color/logo2"
            app:cardCornerRadius="15dp"
            app:cardMaxElevation="10dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">
                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/temperature"
                    android:layout_marginTop="20dp"

                    android:layout_marginBottom="20dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/temperature"
                    android:textColor="@color/logo1"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    android:layout_marginBottom="10dp"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <!-- Frequency Card -->
        <androidx.cardview.widget.CardView
            android:id="@+id/frequency_cardView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:layout_columnWeight="1"
            app:cardBackgroundColor="@color/logo2"
            app:cardCornerRadius="15dp"
            app:cardMaxElevation="10dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">
                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/frequency"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/frequency"
                    android:textColor="@color/logo1"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    android:layout_marginBottom="10dp"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <!-- Mass Card -->
        <androidx.cardview.widget.CardView
            android:id="@+id/mass_cardView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:layout_columnWeight="1"
            app:cardBackgroundColor="@color/logo2"
            app:cardCornerRadius="15dp"
            app:cardMaxElevation="10dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">
                <ImageView
                    android:id="@+id/area_ic"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/mass"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mass"
                    android:textColor="@color/logo1"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    android:layout_marginBottom="10dp"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </GridLayout>
</LinearLayout>
